Add registration function and list of registered devices

--- a/app/views/announcements/index.html.erb
+++ b/app/views/announcements/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing announcements</h1>
+<h1>Announcements</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Description</th>
@@ -28,4 +28,6 @@
 
 <br>
 
-<%= link_to 'New Announcement', new_announcement_path %>
+<%= link_to 'New Announcement', new_announcement_path %> | 
+
+<%= link_to 'Go To Registered Devices', devices_path %>
