--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h3>Home</h3>
 
 <ul>
-  <li><%= link_to 'Go to Announcments', announcements_path %></li>
+  <li><%= link_to 'Go to Announcements', announcements_path %></li>
   <li><%= link_to 'Go to Devices', devices_path %></li>
 </ul>
 
