--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,8 @@
 
 <div>
   <p>
-    <%= link_to 'Download the most recent version of the AMS app', '#'  %>
+  <%= link_to 'Download the most recent version of the AMS app', 
+    'https://s3.amazonaws.com/jonaski/ams/android/AMS.apk'  %>
   </p>
   <p>
     Use the link above to download the most recent version of the android application.
