Update home page with info on recent updates

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,6 +34,7 @@
 <div class="well well-large">
   <h3>Web App</h3>
   <ul>
+    <li> Background Feature - can send information about recent announcements created (used for sync function)<strong> * NEW </strong></li>
     <li>Can create, edit and delete announcements</li>
     <li>Can accept registrations from the mobile app to receive announcement notifications</li>
     <li>Can push announcments to all registered devices</li>
@@ -43,6 +44,7 @@
 <div class="well well-large">
   <h3>Mobile App</h3>
   <ul>
+    <li>Can display the list of announcements and sync that list from the server<strong> * NEW </strong></li>
     <li>Can register to receive notifications of announcements</li>
     <li>Will display any announcement sent as an Android notification (shows up as a help icon)</li>
   </ul>
